--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,11 +4,16 @@ services:
   db:
     restart: always
     container_name: decide_db
-    image: postgres:alpine
+    image: postgres:9.6-alpine
     volumes:
       - db:/var/lib/postgresql/data
     networks:
       - decide
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+      - POSTGRES_HOST_AUTH_METHOD=trust
   web:
     restart: always
     container_name: decide_web
